# seer

./: .gitignore  README.md
backend/: README.md  main.py  pyproject.toml
backend/app/: main.py  prompt.py  tasks.py
backend/app/ai/: prompt.py  tarsier.py
backend/app/scripts/: dump.py  dump.sh
backend/workspace/: combined_code_dump.txt
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/results/: page.tsx
frontend/src/components/ui/: spinner.tsx
